--- a/hdl-wave-ai/package.json
+++ b/hdl-wave-ai/package.json
@@ -1,9 +1,14 @@
 {
   "publisher": "capp",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/andrewcapatina/hdl-wave-ai"
+  },
   "name": "hdl-wave-ai",
   "displayName": "HDL Wave AI",
   "description": "AI-assisted hardware verification using VaporView waveforms and local or cloud LLMs",
-  "version": "0.0.1",
+  "icon": "icon.png",
+  "version": "0.0.3",
   "license": "AGPL-3.0-or-later",
   "engines": {
     "vscode": "^1.109.0"
@@ -32,7 +37,10 @@
       "properties": {
         "hdlWaveAi.provider": {
           "type": "string",
-          "enum": ["anthropic", "openai-compatible"],
+          "enum": [
+            "anthropic",
+            "openai-compatible"
+          ],
           "enumDescriptions": [
             "Use the Anthropic API (Claude)",
             "Use any OpenAI-compatible API (Ollama, NVIDIA NIM, vLLM, etc.)"
@@ -65,6 +73,12 @@
           "default": "qwen2.5-coder:32b",
           "description": "Model name for OpenAI-compatible API"
         },
+        "hdlWaveAi.waveform.defaultEndTime": {
+          "type": "number",
+          "default": 10000,
+          "minimum": 100,
+          "description": "Fallback simulation end time when no VaporView markers are set. Increase for longer simulations without markers."
+        },
         "hdlWaveAi.waveform.sampleStepSize": {
           "type": "number",
           "default": 1,
@@ -78,7 +92,9 @@
         },
         "hdlWaveAi.hdl.searchPaths": {
           "type": "array",
-          "items": { "type": "string" },
+          "items": {
+            "type": "string"
+          },
           "default": [],
           "description": "Additional absolute directory paths to search for HDL source files (e.g. your RTL directory outside the workspace)"
         },
@@ -124,18 +140,19 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "marked": "^17.0.3",
     "openai": "^4.96.0"
   },
   "devDependencies": {
-    "@types/vscode": "^1.109.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
-    "typescript-eslint": "^8.54.0",
-    "eslint": "^9.39.2",
+    "@types/vscode": "^1.109.0",
+    "@vscode/test-cli": "^0.0.12",
+    "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.27.2",
+    "eslint": "^9.39.2",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3",
-    "@vscode/test-cli": "^0.0.12",
-    "@vscode/test-electron": "^2.5.2"
+    "typescript-eslint": "^8.54.0"
   }
 }
