--- a/hdl-wave-ai/package.json
+++ b/hdl-wave-ai/package.json
@@ -6,7 +6,7 @@
   },
   "name": "hdl-wave-ai",
   "displayName": "HDL Wave AI",
-  "description": "AI-assisted hardware verification using VCD and FST waveforms with local or cloud LLMs",
+  "description": "AI-assisted hardware verification using VCD and FST waveforms with local or cloud LLMs. Features tool-use (RAG) mode for large designs and a standalone MCP server for integration with Claude Code, Claude Desktop, and other AI tools.",
   "icon": "icon.png",
   "version": "0.1.0",
   "license": "AGPL-3.0-or-later",
@@ -21,6 +21,9 @@
   ],
   "activationEvents": [],
   "main": "./dist/extension.js",
+  "bin": {
+    "hdl-wave-mcp": "./dist/mcp-server.js"
+  },
   "contributes": {
     "commands": [
       {
@@ -154,12 +157,15 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "mcp": "node dist/mcp-server.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "marked": "^17.0.3",
-    "openai": "^4.96.0"
+    "openai": "^4.96.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
